# ProjectKassandra

./: .cproject  .project  CMakeCache.txt  CMakeLists.txt  FindEigen.cmake  Makefile  README.md  cmake_install.cmake  passthrough.cpp
.csettings/: cdt.managedbuild.toolchain.gnu.base.1304265277_cdtBuildSystem  cdt.managedbuild.toolchain.gnu.base.1304265277_org.eclipse.cdt.core.settings
